API de cotação de valores de empresas da bolsa

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -24,6 +24,9 @@ var chart = new CanvasJS.Chart("chartContainer", {
 	title: {
         text: "Total Investido por Empresa"
 	},
+    axisX: {
+        title: "Empresas"
+    },
 	axisY: {
 		title: "Em R$"
 	},
