--- a/Views/CotacaoBolsa/Index.cshtml
+++ b/Views/CotacaoBolsa/Index.cshtml
@@ -25,7 +25,7 @@
     };
 
     var symbol = getUrlParameter('symbol');
-
+    //api hgbrasil
     $.getJSON("/CotacaoBolsa/Acao", { symbol: symbol })
         .done(function (data) {
             const obj = JSON.parse(data);
