--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -5,20 +5,23 @@
 
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
 </div>
 
 
+<div style="position:relative">
+    <div id="chartValorInvestido" style="height: 370px; width: 50%; position:absolute;left:0"></div>
 
-<div id="chartContainer" style="height: 370px; width: 100%;"></div>
+    <div id="chartContainer2" style="height: 370px; width: 50%;position:absolute; right:0"></div>
+</div>
+
 
 <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
 <script>
 window.onload = function () {
 
-var chart = new CanvasJS.Chart("chartContainer", {
+    var chart = new CanvasJS.Chart("chartValorInvestido", {
 	animationEnabled: true,
 	theme: "light2", // "light1", "light2", "dark1", "dark2"
 	title: {
@@ -35,6 +38,27 @@ var chart = new CanvasJS.Chart("chartContainer", {
 		dataPoints: @Html.Raw(ViewBag.DataPoints)
 	}]
 });
+
+	chart.render();
+
+	 chart = new CanvasJS.Chart("chartContainer2", {
+	animationEnabled: true,
+	theme: "light2", // "light1", "light2", "dark1", "dark2"
+	title: {
+        text: "Total Investido por Empresa"
+	},
+    axisX: {
+        title: "Empresas"
+    },
+	axisY: {
+		title: "Em R$"
+	},
+	data: [{
+		type: "column",
+		dataPoints: @Html.Raw(ViewBag.DataPoints)
+	}]
+});
+
 chart.render();
 
 }
